array.island.Island.scala.error
Compilation error:
Island:4: error: not found: value len
  for (k <- 1 to len(num)){
                 ^